--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         <h1>Stiahni si GBST simulátor ZADARMO!</h1>
     </div>
     <div id="box2">
-        <a href="subory/sano.exe" download>
+        <a href="https://drive.google.com/drive/folders/1NpsodB9hak7y86RcTmGblZXmhy4hzzWn?usp=drive_link">
             <button>Stiahni</button>
         </a>
     </div>
 </body>
+
 </html>
