--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="box1">
-        <h1>Stiahni si GBST simulátor ZADARMO!</h1>
+        <h1 style="color: black;">Stiahni si GBST simulátor ZADARMO!</h1>
     </div>
     <div id="box2">
         <a href="https://drive.google.com/drive/folders/1NpsodB9hak7y86RcTmGblZXmhy4hzzWn?usp=drive_link">
@@ -19,3 +19,4 @@
 </body>
 
 </html>
+
